# AI-Powered-Portfolio-Risk-Decision-Engine

./: .gitignore  README.md  SETUP_GIT_FIRST_TIME.cmd
Main code/: .env.example  .gitignore  README.md  config.yaml  main.py  pyproject.toml
Main code/alpha/: __init__.py  _signal_utils.py  carry.py  correlation_regime_signal.py  cross_sectional.py  gating.py  mean_reversion.py  momentum.py  signal_combiner.py
Main code/api/: __init__.py  live_snapshot.py
Main code/backtest/: __init__.py  ablation.py  benchmark.py  corr_z_path.py  engine.py  evaluation.py  fills.py  pnl.py  portfolio_book.py  run.py  walkforward.py
Main code/context/: __init__.py  analogs.py  recent_changes.py
Main code/core/: __init__.py  publish.py  schemas.py  snapshot.py  state_history.py
Main code/dashboard/: __init__.py  app.py  styles.py  text_blocks.py  theme.py  view_model.py
Main code/data/: __init__.py  data_quality.py  fetcher.py  panel_store.py  universe.py
Main code/detection/: __init__.py  anomaly.py
Main code/diagnostics/: __init__.py  contagion.py  factor_contribution.py  feature_importance.py  regime_attribution.py  signal_attribution.py
Main code/docs/: IMPLEMENTATION_ROADMAP.md  RESEARCH_NOTE.md  ablation_summary.md  alpha_and_risk.md  backend_snapshot_contract.md  backtest_assumptions.md  benchmarks.md  decision_policy.md  failure_analysis.md  limitations.md  methodology.md  model_risk.md  results_summary.md
Main code/experiments/: README.md  registry.csv
Main code/features/: __init__.py  history_overlay.py  returns.py  state_builder.py
Main code/risk/: garch.py  (+5 more)
(+90 files in other folders)
