[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-risk-engine"
version = "0.1.0"
description = "Real-time multi-asset portfolio risk and decision engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "yfinance>=0.2.40",
    "pandas-datareader>=0.10.0",
    "arch>=6.0",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "aiohttp>=3.9",
    "dash>=2.14",
    "plotly>=5.18",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "pytest-benchmark>=4.0",
    "mypy>=1.0",
    "types-PyYAML",
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = false
ignore_missing_imports = true
packages = [
    "data",
    "features",
    "risk",
    "detection",
    "stress",
    "signals",
    "dashboard",
    "reports",
    "core",
    "pre",
    "regime",
    "alpha",
    "portfolio",
    "hedging",
    "backtest",
    "diagnostics",
]
